@@ -17,8 +17,21 @@ buildscript {
   repositories {
     if (no_nexus) {
       println("using repositories 'jcenter' and 'mavenCentral', because property no_nexus=$no_nexus")
+      mavenLocal()
       jcenter()
       mavenCentral()
+      maven {
+        url "https://repo1.maven.org/maven2/"
+        mavenContent {
+          releasesOnly()
+        }
+      }
+      maven {
+        url "https://repo.jenkins-ci.org/releases/"
+        mavenContent {
+          releasesOnly()
+        }
+      }
     } else {
       println("using nexus repositories")
       maven() {
@@ -50,7 +63,7 @@ buildscript {
 
 plugins {
   id "groovy"
-  id 'com.adarshr.test-logger' version '3.1.0'
+  //id 'com.adarshr.test-logger' version '3.1.0'
   id 'jacoco'
   id 'org.springframework.boot' version "${springbootVersion}"
   id 'com.bmuschko.docker-spring-boot-application' version '7.1.0'
@@ -105,6 +118,12 @@ compileGroovy {
   groovyOptions.javaAnnotationProcessing = true
 }
 
+configurations.all {
+  resolutionStrategy {
+    force (group: 'org.codehaus.groovy', name: 'groovy-all', version: groovyallVersion)
+  }
+}
+
 dependencies {
   implementation (group: 'org.codehaus.groovy', name: 'groovy-all', version: groovyallVersion){
     exclude group: "org.codehaus.groovy", module: "groovy-test-junit5"
@@ -128,6 +147,9 @@ dependencies {
   implementation 'org.apache.httpcomponents:httpclient:4.5.13'
   implementation "org.apache.pdfbox:pdfbox:2.0.24"
 
+  implementation("ch.qos.logback:logback-classic:1.2.10")
+
+
   testImplementation "org.junit.jupiter:junit-jupiter-api"
   testImplementation "org.junit.jupiter:junit-jupiter-engine"
   testImplementation("uk.org.webcompere:system-stubs-core:1.2.0")
@@ -140,24 +162,73 @@ dependencies {
   testImplementation "org.springframework.boot:spring-boot-starter-test:${springbootVersion}"
 
   testImplementation "com.github.stefanbirkner:system-rules:1.19.0"
-  testImplementation 'com.github.tomakehurst:wiremock:2.27.2'
+  testImplementation "com.github.tomakehurst:wiremock-jre8:2.32.0"
   testImplementation 'io.rest-assured:rest-assured:4.4.0'
 
   gatlingImplementation 'org.awaitility:awaitility:4.1.1'
   gatlingImplementation 'io.rest-assured:rest-assured:4.4.0'
+
+  // From shared lib
+  implementation("com.konghq:unirest-java:3.13.4")
+  implementation("org.yaml:snakeyaml:1.30")
+  implementation("com.vladsch.flexmark:flexmark-all:0.62.2")
+  implementation("fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.core:2.0.2")
+  implementation("fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.pdf:2.0.2")
+  implementation("org.apache.pdfbox:pdfbox:2.0.25")
+  implementation("org.apache.poi:poi:5.1.0")
+  implementation("net.lingala.zip4j:zip4j:2.9.1")
+
+  implementation("com.xlson.groovycsv:groovycsv:1.3")
+  implementation "net.lingala.zip4j:zip4j:2.1.1"
+
+/*  implementation 'org.slf4j:jcl-over-slf4j:1.7.30'
+  implementation 'ch.qos.logback:logback-classic:1.2.3'
+  implementation "com.konghq:unirest-java:2.4.03:standalone"
+  implementation "fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.core:2.0.2"
+  implementation "fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.pdf:2.0.2"
+  implementation "org.apache.ivy:ivy:2.2.0"
+  implementation "org.apache.pdfbox:pdfbox:2.0.23"
+  implementation "org.apache.poi:poi:4.0.1"
+  implementation "org.yaml:snakeyaml:1.24"
+  implementation 'com.vladsch.flexmark:flexmark-all:0.60.2' // for markdown to pdf conversion (sonarqube reports)
+  implementation 'com.xlson.groovycsv:groovycsv:1.3'*/
+
+ // testImplementation ("com.athaydes:spock-reports:1.6.3") { transitive = false }
+  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.21.0'
+  testImplementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+ // testImplementation "com.lesfurets:jenkins-pipeline-unit:1.1"
+ // testImplementation "net.bytebuddy:byte-buddy:1.10.8"
+  //testImplementation "org.objenesis:objenesis:3.1"
+  //testImplementation "cglib:cglib-nodep:3.3.0"                      // for mocking classes
+  testImplementation "com.github.stefanbirkner:system-rules:1.19.0" // for managing environment variables
+  testImplementation "org.hamcrest:hamcrest:2.1"
+  testImplementation "org.skyscreamer:jsonassert:1.5.0"             // JSON Asserts
 }
 
 test {
-  testLogging {
+  /*testLogging {
     showStandardStreams = true
     exceptionFormat = 'full'
-  }
+  }*/
   filter {
     includeTestsMatching "*Spec"
   }
   systemProperty 'com.athaydes.spockframework.report.outputDir', 'build/reports/spock'
+  systemProperty 'com.athaydes.spockframework.report.projectName', 'docGen'
+  systemProperty 'com.athaydes.spockframework.report.projectVersion', version
+  systemProperty "testRecordMode", project.findProperty('testRecordMode')?: false
+  systemProperty "generateExpectedPdfFiles", project.findProperty('generateExpectedPdfFiles')?: false
+  systemProperty "nexusURL", project.findProperty('nexusURL')?: "http://nexus.odsbox.lan:7990"
+  systemProperty "sonarQuURL", project.findProperty('sonarQuURL')?: "http://sonar.odsbox.lan:7990"
+  systemProperty "bitbucketURL", project.findProperty('bitbucketURL')?: "http://bitbucket.odsbox.lan:7990"
+  systemProperty "docGenURL", project.findProperty('docGenURL')?: "http://docgen.odsbox.lan:8080"
+  systemProperty "jiraURL", project.findProperty('jiraURL')?: "http://jira.odsbox.lan:8080"
+  systemProperty "domainUser", project.findProperty('domainUser')?: "openshift"
+  systemProperty "domainPassword", project.findProperty('domainPassword')?: "openshift"
+  systemProperty "nexusUser", project.findProperty('nexusUser')?: "openshift"
+  systemProperty "nexusPassword", project.findProperty('nexusPassword')?: "openshift"
+  systemProperty "wiremock.textToReplace", project.findProperty('wiremock.textToReplace')?: ""
   maxHeapSize = "2048m"
-  jvmArgs "-XX:MaxPermSize=256m"
   useJUnitPlatform()
 
   finalizedBy jacocoTestReport
